--- a/templates/planet/header.html
+++ b/templates/planet/header.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
 
     <!-- Navbar brand -->
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="{% url 'home' %}">WadThePlanet</a>
 
     <!-- Collapsible content -->
     <div class="collapse navbar-collapse" id="header">
