--- a/templates/planet/header.html
+++ b/templates/planet/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 
     <!-- Navbar brand -->
     <a class="navbar-brand" href="{% url 'home' %}">WadThePlanet</a>
