--- a/templates/planet/editor.html
+++ b/templates/planet/editor.html
@@ -1,3 +1,4 @@
 {% load static %}
 
-<script type="text/javascript" src="{% static 'js/editor.js' %}"/>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.min.js'></script>
+<script type="text/javascript" src="{% static 'js/editor.js' %}"></script>
