--- a/templates/planet/editor.html
+++ b/templates/planet/editor.html
@@ -1,12 +1,7 @@
 {% load static %}
 
-<!-- 100% parent width (container-fluid), no padding on the only column (col-p-0) -->
-<div class="container-fluid">
-    <div class="row flex-grow-1">
-        <div class="col-p0 flex-grow-1" id="editor-container">
-            <!-- editor.js will insert the WebGL canvas here -->
-        </div>
-    </div>
+<div class="d-flex flex-row" id="editor-container">
+    <!-- editor.js will insert the WebGL canvas here -->
 </div>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.min.js'></script>
