Edited the header

--- a/templates/planet/header.html
+++ b/templates/planet/header.html
@@ -1,6 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#header" aria-controls="navbarToggleExternalContent"
-        aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#header" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <!-- Navbar brand -->
@@ -8,12 +7,12 @@
 
     <!-- Collapsible content -->
     <div class="navbar-collapse collapse flex-row-reverse" id="header">
-        <div class="mx-2 d-inline">
+        <div class="d-inline">
             <button class="btn btn-outline-success" type="submit">Login</button>
             <button class="btn btn-outline-success" type="submit">Register</button>
         </div>
 
-        <form class="d-inline flex-grow-1">
+        <form class="mr-2 d-inline flex-grow-1">
             <div class="input-group">
                 <input class="form-control " type="text" placeholder="Search" aria-label="Search">
             </div>
