Added a navbar and fixed padding for content and removed some css rules

--- a/templates/planet/editor.html
+++ b/templates/planet/editor.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div class="d-flex flex-row" id="editor-container">
+<div id="editor-container">
     <!-- editor.js will insert the WebGL canvas here -->
 </div>
 
