--- a/templates/planet/home.html
+++ b/templates/planet/home.html
@@ -3,9 +3,20 @@
 
 {% load staticfiles %}
 
-{% block body_block %}
+{% block content_block %}
+    <p>
     There is some text There
+    </p>
     <div class="text-center">
         <img class="img-responsive" src="{% static "images/solar-system.jpg" %}"  alt="Picture of the Solar System" style="max-width: 100%"/>
     </div>
-{% endblock body_block %}
+    <div class="text-center">
+        <img class="img-responsive" src="{% static "images/solar-system.jpg" %}"  alt="Picture of the Solar System" style="max-width: 100%"/>
+    </div><div class="text-center">
+        <img class="img-responsive" src="{% static "images/solar-system.jpg" %}"  alt="Picture of the Solar System" style="max-width: 100%"/>
+    </div><div class="text-center">
+        <img class="img-responsive" src="{% static "images/solar-system.jpg" %}"  alt="Picture of the Solar System" style="max-width: 100%"/>
+    </div><div class="text-center">
+        <img class="img-responsive" src="{% static "images/solar-system.jpg" %}"  alt="Picture of the Solar System" style="max-width: 100%"/>
+    </div>
+{% endblock content_block %}
