--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,12 +1,3 @@
-main {
-    padding-top: 80px;
-}
-
-#editor-container {
-    height: 90vh;
-}
-
-#editor {
-    width: 100%;
-    height: 100%;
+.flex-fixed-width-item {
+    flex: 0 0 160px;
 }
