--- a/templates/planet/header.html
+++ b/templates/planet/header.html
@@ -1,9 +1,10 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark sticky-top bg-dark" id="header">
+    <!-- Navbar brand -->
+    <a class="navbar-brand" id="logo" href="{% url 'home' %}">WadThePlanet</a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#header" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <!-- Navbar brand -->
-    <a class="navbar-brand" href="{% url 'home' %}">WadThePlanet</a>
 
     <!-- Collapsible content -->
     <div class="navbar-collapse collapse flex-row-reverse" id="header">
