WIP: Editor raycasting for painting + mouse cursor changing

--- a/templates/planet/editor.html
+++ b/templates/planet/editor.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div id="editor-container">
+<div id="editor-container" class="mh-100">
     <!-- editor.js will insert the WebGL canvas here -->
 </div>
 
