--- a/static/css/main.css
+++ b/static/css/main.css
@@ -15,6 +15,25 @@
     width: 100%;
     height: 100%;
 }
+
+.sidebar-container {
+    z-index: 5;
+    padding-top: 84px;
+    position: fixed;
+    width: 220px;
+    height: 100%;
+    left: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+    background: #1C2331;
+    color: #fff;
+}
+
+
+
+
+
+
 html,
 body,
 header,
