--- a/templates/planet/header.html
+++ b/templates/planet/header.html
@@ -26,13 +26,13 @@
             </ul>
             <form class="form-inline md-form my-0 active-cyan-2 ml-2 flex-grow-1">
                 <i class="fas fa-search" id="searchbar" aria-hidden="true"></i>
-                <input class="form-control form-control-sm ml-3 flex-grow-1" id="searchbar" type="text" placeholder="Search" aria-label="Search">
+                <input class="form-control ml-md-3 flex-grow-1" id="searchbar" type="text" placeholder="Search" aria-label="Search">
             </form>
-            <i class="fas fa-user-astronaut fa-2x mx-4 " id="astronaut"></i>
-
             <!-- Right -->
             <ul class="navbar-nav nav-flex-icons ">
-
+                <li class="nav-item">
+                    <i class="fas fa-user-astronaut fa-2x mx-4 my-2 pt-1" id="astronaut"></i>
+                </li>
                 <li class="nav-item">
                     <button class="btn btn-dark" type="submit">Login</button>
                     <button class="btn btn-dark" type="submit">Register</button>
