Added a spinner to show when the editor is loading, setup gamma-correct rendering
Project now depends on full JQuery instead of slim JQuery.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,6 +4,15 @@
 
 #editor-container {
     height: 100vh;
+    background: black;
+}
+
+#editor-container #spinner {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 10vh;
+    height: 10vh;
 }
 
 #searchbar {
