--- a/templates/planet/editor.html
+++ b/templates/planet/editor.html
@@ -1,6 +1,9 @@
 {% load static %}
 
 <div id="editor-container" class="mh-100">
+    <div id="spinner" class="spinner-grow text-light" role="status">
+        <span class="sr-only">Loading...</span>
+    </div>
     <!-- editor.js will insert the WebGL canvas here -->
 </div>
 
