Added the navbar and resize working properly

--- a/templates/planet/base.html
+++ b/templates/planet/base.html
@@ -41,7 +41,7 @@
         {% endblock splashscreen %}
         <main role="main">
             {% block body_block %}
-            <div class="px-3">
+            <div class="px-3 main-screen">
                 {% block content_block %}
                 This is the content with padding
                 {% endblock %}
