--- a/templates/planet/home.html
+++ b/templates/planet/home.html
@@ -3,20 +3,18 @@
 
 {% load staticfiles %}
 {% block splashscreen %}
-<div class="view full-page-intro" style="background-image: url({% static 'images/solar-system.jpg' %}); background-repeat: no-repeat; background-size: cover;">
+<div class="view full-page-intro">
     <!-- Mask & flexbox options-->
     <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
         <!-- Content -->
-        <div class="container">
+        <div class="container-fluid">
             <!--Grid row-->
             <div class="text-center white-text">
                 <h1 class="display-4 font-weight-bold">Create Yours</h1>
                 <h1 class="display-4 font-weight-bold">Now!</h1>
                 <button type="button" class="btn btn-elegant btn-lg waves-effect">Register
-                    <a href="#">
+                    <a href="{% url 'home' %}"></a>
                 </button>
-
-
             </div>
             <!--Grid column-->
         </div>
@@ -24,15 +22,10 @@
 
     </div>
     <!-- Content -->
-
-</div>
-<!-- Mask & flexbox options-->
-
 </div>
 {% endblock splashscreen %}
 
 {% block content_block %}
-
 <p>
     There is some text There
 </p>
