Edited the header so it doesnt bug on mobile

--- a/templates/planet/header.html
+++ b/templates/planet/header.html
@@ -14,9 +14,10 @@
 
         <!-- Links -->
         <div class="collapse navbar-collapse" id="menu">
-            <form class="form-inline md-form my-0 active-cyan-2 ml-2 flex-grow-1">
-                <i class="fas fa-search" id="searchbar" aria-hidden="true"></i>
-                <input class="form-control ml-md-3 flex-grow-1" id="searchbar" type="text" placeholder="Search" aria-label="Search">
+            <div class="adder"></div>
+            <form class="form-inline md-form my-0 active-cyan-2 flex-grow-1">
+                <i class="ml-2 fas fa-search" id="searchbar" aria-hidden="true"></i>
+                <input class="form-control ml-3 flex-grow-1" id="searchbar" type="text" placeholder="Search" aria-label="Search">
             </form>
             <!-- Right -->
             <ul class="navbar-nav nav-flex-icons ">
