--- a/templates/planet/navbar.html
+++ b/templates/planet/navbar.html
@@ -1,23 +1,21 @@
-<nav class="sidebar-container navbar-dark collapse d-lg-block">
-        <div id="sidebar">
-            <div class="sidebar-left">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'home' %}">
-                            <i class="fa fa-home" aria-hidden="true"></i> Homepage
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'test' %}">
-                            <i class="fas fa-globe-europe"></i></i> Planet View
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="fa fa-users" aria-hidden="true"></i> Account
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+<nav class="sidebar-container navbar-dark collapse d-lg-block" id="sidebar">
+    <div class="sidebar-left">
+        <ul class="navbar-nav collapse ">
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'home' %}">
+                    <i class="fa fa-home" aria-hidden="true"></i> Homepage
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'test' %}">
+                    <i class="fas fa-globe-europe"></i></i> Planet View
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">
+                    <i class="fa fa-users" aria-hidden="true"></i> Account
+                </a>
+            </li>
+        </ul>
+    </div>
 </nav>
