--- a/templates/planet/navbar.html
+++ b/templates/planet/navbar.html
@@ -1,6 +1,6 @@
 <nav class="sidebar-container navbar-dark collapse d-lg-block" id="sidebar">
     <div class="sidebar-left">
-        <ul class="navbar-nav collapse ">
+        <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'home' %}">
                     <i class="fa fa-home" aria-hidden="true"></i> Homepage
@@ -12,8 +12,13 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">
-                    <i class="fa fa-users" aria-hidden="true"></i> Account
+                <a class="nav-link" href="{% url 'register' %}">
+                    <i class="fa fa-users" aria-hidden="true"></i> Register
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">
+                    <i class="fa fa-users" aria-hidden="true"></i> Login
                 </a>
             </li>
         </ul>
