--- a/templates/planet/register.html
+++ b/templates/planet/register.html
@@ -3,14 +3,27 @@
 
 {% load staticfiles %}
 {% load crispy_forms_tags %}
-{% crispy user_form %}
-{% crispy profile_form %}
 
 {% block content_block %}
-  <form method="post" novalidate>
+  <form method="post" novalidate class="needs-validation">
     {% csrf_token %}
-        {{ user_form| crispy}}
-        {{ profile_form.picture| as_crispy_field }}
+    <div class="form-row">
+      <div class="form-group col-md-6 mb-0">
+        {{ user_form.username| as_crispy_field}}
+      </div>
+      <div class="form-group col-md-6 mb-0">
+        {{ user_form.email| as_crispy_field }}
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6 mb-0">
+        {{ user_form.password| as_crispy_field}}
+      </div>
+      <div class="form-group col-md-6 mb-0">
+        {{ user_form.password_copy| as_crispy_field }}
+      </div>
+    </div>
+    {{ user_form.avatar| as_crispy_field }}
     <button type="submit" class="btn btn-primary">Sign in</button>
   </form>
 {% endblock %}
