--- a/static/css/editor.css
+++ b/static/css/editor.css
@@ -31,3 +31,11 @@
     bottom: 10%;
     right: 2%;
 }
+
+#alertbar {
+    position: fixed;
+    left: 300px;
+    right: 300px;
+    height: 6mm;
+    bottom: 6mm;
+}
