--- a/templates/planet/header.html
+++ b/templates/planet/header.html
@@ -3,7 +3,7 @@
 
         <!-- Brand -->
         <a class="navbar-brand" href="{% url 'home' %}" target="_blank">
-            <strong>WadThePlanet</strong>
+            <strong id="brand1">WDP<span id="brand2">?</span></strong>
         </a>
 
         <!-- Collapse -->
