--- a/templates/planet/search.html
+++ b/templates/planet/search.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+
+<!-- Agnes
+This template presents a search box and search button within HTML form	--> 
+	
 {% extends 'planet/base.html' %}
 
 {% load staticfiles %}
@@ -11,36 +15,32 @@
 	<h1>Search</h1>
 	</br>
 	
-	
 	<div>
-		<h1>Search with Rango</h1>
+		<h1>Search and Explore</h1>
 		<br/>
-		<form class="form-inline" id="user_form"
-method="post" action="{% url 'search' %}">
-{% csrf_token %}
-<div class="form-group">
-<input class="form-control" type="text" size="50"
-name="query" value="" id="query" />
-</div>
-<button class="btn btn-primary" type="submit" name="submit"
-value="Search">Search</button>
-</form>
+		<form class="form-inline" id="user_form" method="post" action="{% url 'search' %}">
+		{% csrf_token %}
+		<div class="form-group">
+			<input class="form-control" type="text" size="50" name="query" value="" id="query" />
+		</div>
+			<button class="btn btn-primary" type="submit" name="submit" value="Search">Search</button>
+		</form>
 
-<div>
-{% if result_list %}
-<h3>Results</h3>
-<!-- Display search results in an ordered list -->
-<div class="list-group">
-{% for result in result_list %}
-<div class="list-group-item">
-<h4 class="list-group-item-heading">
-<a href="{{ result.link }}">{{ result.title }}</a>
-</h4>
-<p class="list-group-item-text">{{ result.summary }}</p>
+	<div>
+		{% if result_list %}
+		<h3>Results</h3>
+		<!-- Display search results in an ordered list -->
+		<div class="list-group">
+		{% for result in result_list %}
+			<div class="list-group-item">
+				<h4 class="list-group-item-heading">
+					<a href="{{ result.link }}">{{ result.title }}</a>
+					</h4>
+					<p class="list-group-item-text">{{ result.summary }}</p>
+			</div>
+		{% endfor %}
+		</div>
+	{% endif %}
+	</div>
 </div>
-{% endfor %}
-</div>
-{% endif %}
-</div>
-</div>
-% endblock %}
+{% endblock %}
