--- a/templates/planet/home.html
+++ b/templates/planet/home.html
@@ -27,7 +27,7 @@
 
 {% endblock splashscreen %}
 
-{% block content_block %}
+{% block padded_content_block %}
 <p>
     There is some text There
 </p>
@@ -46,4 +46,4 @@
 <div class="text-center">
     <img class="img-responsive" src="{% static "images/solar-system.jpg" %}" alt="Picture of the Solar System" style="max-width: 100%" />
 </div>
-{% endblock content_block %}
+{% endblock padded_content_block %}
