--- a/templates/planet/navbar.html
+++ b/templates/planet/navbar.html
@@ -11,6 +11,7 @@
                     <i class="fas fa-globe-europe"></i></i> Planet View
                 </a>
             </li>
+            {% if not user.is_authenticated %}
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'register' %}">
                     <i class="fa fa-users" aria-hidden="true"></i> Register
@@ -21,6 +22,7 @@
                     <i class="fa fa-users" aria-hidden="true"></i> Login
                 </a>
             </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
