Added a user FK to comment and added an unique constraint for (user, planet) pairs on them

--- a/templates/planet/comments.html
+++ b/templates/planet/comments.html
@@ -9,4 +9,8 @@
         <!-- Note: layout is defined in forms.py, when setting up CommentForm.helper -->
         {% crispy comment_form %}
     </form>
+    {% for comment in comments %}
+        {{ comment.comment }} - {{ comment.rating }}
+        <br>
+    {% endfor %}
 </div>
