Changed a broken login page WIP change view when logged in without pictu

--- a/templates/planet/header.html
+++ b/templates/planet/header.html
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="menu">
             <div class="adder"></div>
             <form class="form-inline md-form my-0 active-cyan-2 flex-grow-1" action="{% url 'search' %}" method="get">
-                <input class="form-control ml-3 flex-grow-1" name="query" type="text" placeholder="Search" aria-label="Search">
+                <input class="form-control ml-3 flex-grow-1 text-white" name="query" type="text" placeholder="Search" aria-label="Search">
                 <button class="search-btn btn btn-dark" type="submit">
                     <i class="fas fa-search"></i>
                 </button>
@@ -25,7 +25,7 @@
             <ul class="navbar-nav nav-flex-icons ">
                 {% if user.is_authenticated %}
                 <li class="nav-item my-1 pt-1 align-self-center" >
-                    <img src="{{ user.avatar.url |default_if_none:'/static/images/default-avatar.png' }}" class="img-fluid" width="45">
+                    <img src="{{ user.avatar.url | default_if_none:'/static/images/default-avatar.png' }}" class="img-fluid" width="45">
                 </li>
                 <li class="nav-item">
                     <a href="{% url 'logout' %}" class="btn btn-dark" role="button">Logout</a>
