--- a/templates/planet/search.html
+++ b/templates/planet/search.html
@@ -2,6 +2,7 @@
 
 <!-- Agnes
 This template presents a search box and search button within HTML form	--> 
+
 	
 {% extends 'planet/base.html' %}
 
@@ -12,13 +13,11 @@ This template presents a search box and search button within HTML form	-->
 
 {% block padded_content_block %}
 <div> 
-	<h1>Search</h1>
-	</br>
-	
+	<h1>Results - {{keyword}}</h1>
 	<div>
-		<h1>Search and Explore</h1>
+	
 		<br/>
-		<form class="form-inline" id="user_form" method="post" action="{% url 'search' %}">
+	<!--	<form class="form-inline" id="user_form" method="post" action="{% url 'search' %}"> -->
 		{% csrf_token %}
 	<!--	<div class="form-group">
 			<input class="form-control" type="text" size="50" name="query" value="" id="query" />
@@ -34,9 +33,10 @@ This template presents a search box and search button within HTML form	-->
 		{% for result in result_list %}
 			<div class="list-group-item">
 				<h4 class="list-group-item-heading">
-					<a href="{{ result.link }}">{{ result.title }}</a>
+					<a href="{{ result.link }}">{{ result.name }}</a>
 					</h4>
 					<p class="list-group-item-text">{{ result.summary }}</p>
+		
 			</div>
 		{% endfor %}
 		</div>
